# src/gin-blog/routers/api/v1/tag.go
@@ -40,13 +40,12 @@ func GetTags(c *gin.Context) {
 	})
 }
 
-// @Summary Add article tag
+// @Summary 新增文章标签
 // @Produce  json
-// @Param name body string true "Name"
-// @Param state body int false "State"
-// @Param created_by body int false "CreatedBy"
+// @Param name query string true "Name"
+// @Param state query int false "State"
+// @Param created_by query int false "CreatedBy"
 // @Success 200 {object} app.Response
-// @Failure 500 {object} app.Response
 // @Router /api/v1/tags [post]
 func AddTag(c *gin.Context) {
 	name := c.Query("name")
@@ -77,14 +76,13 @@ func AddTag(c *gin.Context) {
 	})
 }
 
-// @Summary Update article tag
+// @Summary 修改文章标签
 // @Produce  json
 // @Param id path int true "ID"
-// @Param name body string true "Name"
-// @Param state body int false "State"
-// @Param modified_by body string true "ModifiedBy"
+// @Param name query string true "ID"
+// @Param state query int false "State"
+// @Param modified_by query string true "ModifiedBy"
 // @Success 200 {object} app.Response
-// @Failure 500 {object} app.Response
 // @Router /api/v1/tags/{id} [put]
 func EditTag(c *gin.Context) {
 	id := com.StrTo(c.Param("id")).MustInt()
